# lawAgent

./: .env.example  .gitattributes  .gitignore  CONTEXT.md  LICENSE  PRD.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/manifests/: source_manifest.example.csv  source_manifest.schema.json
design-system/lawagent/: MASTER.md
docker/: elasticsearch.Dockerfile
docs/: ADR-010-use-fastapi.md  CONTEXT.md  PRD.md  RESUME.md  RUNBOOK.md  SERVICE_STACK.md  architecture.md  data-governance-design.md  data-sources.md  implementation-plan-phase-1.md  implementation-plan-phase-2.md  phase-2-issue-specs.md  想法.md
docs/adr/: 0001-first-version-focuses-on-data-compliance.md  0002-use-langgraph-agentic-workflow.md  0003-hybrid-retrieval-first-rerank-later.md  0004-use-postgres-pgvector-and-elasticsearch.md  0005-evaluate-against-retrieval-baselines.md  (+21 more)
frontend/: index.html  package-lock.json  package.json
law_agent/: __init__.py  config.py
scripts/: rebuild_index.py
tests/: test_chunking_law.py  test_chunking_pipeline.py  test_cleaners.py  test_cli.py  test_config.py  test_evalset.py  test_fetchers.py  test_legalbench_rag.py  test_manifest.py  test_metadata_filters.py  test_normalize_docx.py  test_review_agents.py  test_review_api.py  test_review_citations.py  test_review_cli.py  test_review_evalset.py  test_review_evalset_metrics.py  test_review_evalset_runner.py  test_review_evidence.py  test_review_facts.py  test_review_fusion.py  test_review_hybrid_retrieval.py  test_review_io.py  test_review_llm.py  test_review_materials.py  test_review_query_planner.py  test_review_rerank.py  test_review_result_builder.py  test_review_retrieval_adapters.py  test_review_retrieval_keyword.py  test_review_retrieval_service.py  test_review_schemas.py  test_schemas.py  test_service_integration.py
(+98 files in other folders)
