[project]
name = "lawagent"
version = "0.1.0"
description = "Data governance and Agentic RAG foundation for LawAgent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

