[project]
name = "lawagent"
version = "0.1.0"
description = "Data governance and Agentic RAG foundation for LawAgent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "fastapi>=0.110",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
docling = [
  "docling>=2.0",
  "onnxruntime>=1.18",
]
mineru = [
  "mineru[all]>=3.0",
]
parsers = [
  "docling>=2.0",
  "onnxruntime>=1.18",
  "mineru[all]>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["law_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"
